# desktop-runtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  bash.exe.stackdump  deny.toml
.cargo/: config.toml
.github/workflows/: create-release-tag.yml  release.yml  size-check.yml
core/: Cargo.toml  build.rs
core/src/: config.rs  event_loop.rs  ipc.rs  main.rs  paths.rs  protocol.rs  protocol_tests.rs  storage.rs  window.rs
core/src/ipc/: mod.rs  tests.rs  updates.rs
core/wix/: main.wxs
docs/: ARCHITECTURE.md  BUILD.md  REACT.md  RELEASE.md
packaging/: LICENSE.txt  README.md  desktop-runtime.desktop  desktop-runtime.desktop.in  metadata.toml
packaging/icons/: README.md
packaging/linux/: build-appimage.sh  install-build-deps.sh  install-desktop-runtime.sh
packaging/macos/: Info.plist.in  build-app-pkg.sh  distribution.xml  distribution.xml.in
packaging/macos/resources/: License.rtf  welcome.rtf
packaging/scripts/: write-build-env.sh
packaging/windows/: License.rtf  build-msi.ps1  main.wxs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  bridge.js  useNativeCommand.js
